--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "backend/dist/server.js",
   "scripts": {
-    "dev": "ts-node-dev --files backend/server.ts",
-    "build": "tsc",
-    "start": "node backend/dist/server.js"
+    "dev": "cross-env NODE_ENV=development ts-node-dev --files backend/server.ts",
+    "build": "npm install && npm install --prefix frontend && tsc && npm run build --prefix frontend",
+    "start": "cross-env NODE_ENV=production node backend/dist/server.js"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,7 @@
     "cloudinary": "^2.6.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
