--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "backend/dist/server.js",
   "type": "module",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development ts-node-dev --files backend/server.ts",
+    "dev": "cross-env NODE_ENV=development tsx watch backend/server.ts",
     "build": "npm install && npm install --prefix frontend && tsc && npm run build --prefix frontend",
     "start": "cross-env NODE_ENV=production node backend/dist/server.js"
   },
@@ -27,7 +27,7 @@
     "@types/cookie-parser": "^1.4.8",
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
-    "ts-node-dev": "^2.0.0",
+    "tsx": "^4.19.4",
     "typescript": "^5.8.3"
   }
 }
